# SimpleCards

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/cards/: cloze.py
app/db/: card_repository.py  connection.py  deck_repository.py  field_layout.py  history_repository.py  learn_repository.py  models.py  review_repository.py  schema.sql
app/pdf_import/: candidate.py  extractor.py  import_pdf.py  splitter.py
app/sm2/: grading.py  scheduler.py
app/study_modes/: practice.py
app/theming/: animations.py  dark_theme.qss  fonts.py  palette.py
app/ui/: main_window.py  settings_store.py
app/ui/widgets/: card_browser.py  card_editor_dialog.py  card_flip_widget.py  deck_browser.py  deck_settings_dialog.py  deck_settings_screen.py  field_panel.py  history_screen.py  import_screen.py  learn_screen.py  match_screen.py  new_deck_dialog.py  settings_screen.py  stats_screen.py  study_hub_screen.py  study_session.py  test_screen.py
tests/: test_learn_repository.py  test_practice.py  test_sm2.py
