[project]
name = "simplecards"
version = "0.1.0"
description = "SimpleCards — a local, multi-function flashcard study app"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.11.1",
    "pymupdf",
    "anthropic",
    "pydantic>=2",
    "keyring",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
